--- a/PlanServer/frmMain.resx
+++ b/PlanServer/frmMain.resx
@@ -123,4 +123,22 @@
   <metadata name="statusStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>130, 17</value>
   </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAQAAEABADoAgAAFgAAACgAAAAgAAAAQAAAAAEABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAClZFoA4tjYANnQ0ADSyckAxr29AL+2tgCwqKgAqqOjAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAd3dwAAAAd3dwAAAAAAAAB3Zm
+        dwAAB3ZmdwAAAAAAAHZlVWZwAHZlVWZwAAAAAAd2VERWdwd2VERWdwAAAAAHZUMjRWcHZUMjRWcAAAAA
+        B2VCEkVnB2VCEkVnAAAAAAdlQyNFZwdlQyNFZwAAAAAHdlREVncHdlREVncAAAAAAHZlVWZwAHZlVWZw
+        AAAAAAAHdmZ3AAAHdmZ3AAAAAAAAAHd3cAAAAHd3cAAAAAAAB3d3AAAAAAAAB3d3AAAAAHdmZ3AAAAAA
+        AHdmZ3AAAAdmVVZnAAAAAAdmVVZnAAB3ZURFZ3AAAAB3ZURFZ3AAdlQyNFZwAAAAdlQyNFZwAHZUISRW
+        cAAAAHZUISRWcAB2VDI0VnAAAAB2VDI0VnAAd2VERWdwd3dwd2VERWdwAAdmVVZnB3ZmdwdmVVZnAAAA
+        d2ZncHZlVWZwd2ZncAAAAAd3dwd2VERWdwd3dwAAAAAAAAAHZUMjRWcAAAAAAAAAAAAAB2VCEkVnAAAA
+        AAAAAAAAAAdlQyNFZwAAAAAAAAAAAAAHdlREVncAAAAAAAAAAAAAAHZlVWZwAAAAAAAAAAAAAAAHdmZ3
+        AAAAAAAAAAAAAAAAAHd3cAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA==
+</value>
+  </data>
 </root>
